--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <head>
 	<title>Harmonious_Platform_Systems</title>
 
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
+
 <style>
   body
 {
