--- a/site_nav/status.html
+++ b/site_nav/status.html
@@ -320,7 +320,7 @@
 		</tr>
 	</table>
 <br>
-	<table style="width:50%">
+<div><table style="width:50%"><font color="white">
 		<tr>
 			<th>Signal</th>
 			<th>Network</th>
@@ -371,7 +371,9 @@
 			<td>viADDR Subnet</td>
 			<td><font color="black"><span style="background-color: orange">Partial Active</span></font></td>
 		</tr>
-	</table>
+		</font></table></div>
+	
+
 	<br>
 				<!-- colors
 					&#128994; = green signal
